--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
+* {padding: 0;
+   margin: 0;
+}
 h1{ 
 	font-size: 24px;
-	color: #41B883; 
+	color: #41B883;
+	text-align: center; 
 }
 
 p{
 	font-size: 18px;
+	text-align: center;
 }
+
+img{
+	width: 100%;
+}
+
+
